@@ -51,3 +51,4 @@
 - New default relation's format is csv, as defined in RFC4180
 - Converted sample's relations to csv
 - Deb postinstall generates optimized files, this will increase loading speed
+- Relation module has SQL-like delete
